# Novel-writing

./: .gitignore  .mcp.json  .tmp_find_blobs.ps1  AI写作能力测试方案.md  CLAUDE.md  C盘垃圾文件扫描报告.txt  README.md  RUST_BACKEND_COMPLETED.md  RUST_BACKEND_DESIGN.md  cookies.txt  dump.rdb  skills-lock.json  wrangler.jsonc  功能总表.md  启动说明.md  更新手册.md  需求文档.md
backend/: .env  .env.example  .env.prod.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  INSTALL.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  compare_performance.sh  docker-compose.prod.yml  docker-compose.yml  dump.rdb  monitor.sh  nginx.conf  nginx.prod.conf  requirements.txt  run_all_migrations.ps1  test_api.ps1  test_api.sh  update.sh  部署手册.md
backend-rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  INSTALL.md  Makefile  PROJECT_SUMMARY.md  README.md  START_HERE.md  benchmark.md  compare_performance.sh  docker-compose.yml  run_migrations.ps1  run_migrations.sh  start.ps1  请手动删除本文件夹.txt
backend-rust/migrations/: 001_initial_schema.sql
backend-rust/src/: config.rs  db.rs  error.rs  main.rs
backend-rust/src/handlers/: auth.rs  health.rs  mod.rs  novels.rs
backend-rust/src/middleware/: auth.rs  cors.rs
backend-rust/src/models/: auth_session.rs  chapter.rs  character.rs  mod.rs  snapshot.rs  user.rs
backend-rust/src/services/: auth_service.rs  cache_service.rs  mod.rs  novel_service.rs
backend-rust/src/utils/: crypto.rs  id.rs  time.rs
backend/.github/workflows/: ci.yml
backend/admin-templates/: ai_config_page.html  announcement_page.html  card_key_page.html  change_password.html  dashboard_page.html  embedding_config_page.html  flash.html  forbidden.html  form.html  home.html  image_config_page.html  layout.html  list.html  list_table.html  login.html  prompts_page.html  role_edit_form.html  role_form.html  roles.html  shell.html  shell_nav.html  user_detail_page.html  user_form.html  user_ops_page.html  users_list.html  video_config_page.html
backend/app/: admin.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/core/: config.py
backend/app/routers/: ai.py  auth.py  billing.py  health.py  novels.py
backend/app/services/: ai_entity_extract.py  ai_subscription.py  email_service.py  novel_sync.py
backend/migrations/: 001_initial_schema.sql  002_rename_auth_sessions_to_user_sessions.sql  003_device_auth_wallet.sql  003b_device_auth_wallet_finish.sql  004_ai_keys_in_settings.sql  005_system_settings_add_id.sql  006_card_keys.sql  007_ai_providers.sql  008_ai_providers_cache_pricing.sql  009_novels_add_ai_style_prompt.sql  010_embeddings.sql  011_character_states.sql  012_auto_apply_log.sql  013_system_settings_mediumtext.sql  014_image_providers.sql  015_video_providers.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/admin/: ai_config.rs  announcement.rs  card_key_admin.rs  dashboard.rs  embedding_config.rs  image_config.rs  labels.rs  mod.rs  prompts.rs  shell.rs  user_ops.rs  video_config.rs
backend/src/entities/: ai_wallet.rs  ai_wallet_ledger.rs  mod.rs  novel.rs  payment_order.rs  system_setting.rs  user.rs
backend/src/handlers/: ai.rs  announcement.rs  auth.rs  billing.rs  comic.rs  health.rs  mod.rs  novels.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs
backend/src/models/: auth_session.rs  billing.rs  chapter.rs  character.rs  mod.rs  novel.rs  prompt.rs  snapshot.rs  user.rs
backend/src/services/: ai_provider_service.rs  ai_service.rs  app_state.rs  auth_service.rs  auto_apply_log_service.rs  cache_service.rs  (+14 more)
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+204 files in other folders)
