[package]
name = "novel-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid"] }

# Redis缓存
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
dotenvy = "0.15"

# 密码哈希
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"

# JWT
jsonwebtoken = "9.2"

# HTTP客户端 (AI API)
reqwest = { version = "0.11", features = ["json"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# 验证
validator = { version = "0.18", features = ["derive"] }

# 邮件发送
lettre = { version = "0.11", features = ["tokio1-rustls-tls"] }

# 随机数
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
