[package]
name = "novel-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sea-orm = { version = "1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "chrono"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid"] }

# Redis缓存
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
dotenvy = "0.15"

# 密码哈希
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
argon2 = "0.5"

# JWT
jsonwebtoken = "9.2"

# HTTP客户端 (AI API)
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1"
tokio-stream = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# 验证
validator = { version = "0.18", features = ["derive"] }

# 邮件发送（MAIL_ENABLED=false 时仅编译，不实际发信）
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"] }

# 随机数
rand = "0.8"

# 正则（用于 prompt injection 防御）
regex = "1"

# 管理后台（Django Admin 风格）
axum-admin = { version = "0.1.1", features = ["seaorm"] }
sea-orm-migration = { version = "1", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
minijinja = "2"
tower-cookies = "0.10"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
